err/theword.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/theword'...
Compiling './lib/python3.5/site-packages/theword/theword.py'...
***   File "./lib/python3.5/site-packages/theword/theword.py", line 19
    print """_Surfin' Bird_, by The Trashmen

A well a everybody's heard about the bird
Bird, bird, bird, b-bird's the word
A well a bird, bird, bird, b-bird's the word
A well a bird, bird, bird, b-bird's the word
A well a bird, bird, b-bird's the word
"""
                                            

                                         
                                   
                                            
                                            
                                      
  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/theword-1.0.1b2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
